Fixing nsbeta2+ bug 44022. Loading javascript: URL's from a plugin wasn't always working. r=vidur@netscape.com